SG-2004-06-16-0: Bugfix:    This bugfix is related to SG-2004-06-09-2. The
                            prefious one did not fix all aspects of the growing
                            scheduler and master. The implementation of the
                            job categories was bugy.
                 Changed:   scheduler
                 Review:    JG
                 Issue:     1087

DT-2004-06-15-1: Bugfix:    o Fixed DRMAA Java binding Makefile
                            o Fixed installation of libjdrmaa in distinst
                 Cleanup:   o Removed tabs from aimk help output
                            o Removed unused code from sge_path_alias.c
                 Enhancem.: o Ported JGrid to DRMAA Java binding
                 Changed:   aimk, distinst, sge_path_alias, DRMAA, JGrid

DT-2004-06-15-0: Bugfix:    o Fixed minor bugs in DRMAA Java binding
                            o Fixed bad link in DRMAA howto
                 Enhancem.: o Added Java binding README and started howto
                 Changed:   DRMAA, howtos

JG-2004-06-14-0: QA:        Updated review template and doc.
                 Cleanup:   Removed unused I18N messages.
                 Testsuite: Make checks performance/throughput and 
                            system_tests/qmaster/size check for IZ 1087

DT-2004-06-08-0: Bugfix:    o Backed out AS-2004-06-03-0 for DRMAA README.
                 Changed:   docs

SG-2004-06-09-3: Enhancem.: updated doc/devel/review.txt
                 Review:    JG

SG-2004-06-09-2: Bugfix:    The scheduler did not corectly compress the scheduler
                            info messages, which lead to a hugh memory consumption
                            in bigger clusters with even a low amount of jobs
                            in the system.
                 Changed:   scheduler                            
                 Review:    JG
                 Issue:     1087

SG-2004-06-09-1: Bugfix:    - fixed minor issues in the scheduler profiling